@@ -48,6 +48,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5271: StackOverflowError when compiling in Tez mode (with union and replicated join) (knoguchi)
+
 PIG-5299: PartitionFilterOptimizer failing at compile time (knoguchi)
 
 PIG-5290: User Cache upload contention can cause job failures (xkrogen via rohini)
